<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/label_new_task"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_End"
        app:layout_constraintStart_toStartOf="@id/guideline_Start"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_calendar"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintStart_toStartOf="@id/guideline_Start"
        app:layout_constraintTop_toBottomOf="@+id/til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_date"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_timer"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guideline_End"
        app:layout_constraintStart_toEndOf="@id/til_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hour"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

    <Button
        android:id="@+id/btn_new_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_create_task"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_End"
        app:layout_constraintStart_toStartOf="@+id/guideline_Start" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_task"
        app:layout_constraintEnd_toStartOf="@+id/guideline_End"
        app:layout_constraintStart_toStartOf="@+id/guideline_Start" />
</androidx.constraintlayout.widget.ConstraintLayout>